--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloverthehacker_project-alpha",
+  "name": "theproject",
   "version": "0.0.1",
   "description": "This doesn't have anything currently, but will grow with time.",
   "main": "LICENSE",
