--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "theproject",
-  "version": "0.0.1",
+  "name": "@cloverthehacker/project-alpha",
+  "version": "0.0.2",
   "description": "This doesn't have anything currently, but will grow with time.",
   "main": "LICENSE",
   "scripts": {
