--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@cloverthehacker/project-alpha",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "This doesn't have anything currently, but will grow with time.",
   "main": "LICENSE",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "PROJECT-ALPHA/Index.js"
   },
   "repository": {
     "type": "git",
